# cpp

ex00/: Fixed.cpp  Fixed.hpp  Makefile  main.cpp
ex01/: Fixed  Fixed.cpp  main.cpp
ex02/: Fixed  Fixed.cpp  Fixed.hpp  Makefile  main.cpp
ex03/: cpp_02_00  main.cpp
module_01/ex00/: .main.cpp.un~  a.out  main.cpp
module_01/ex01/: .main.cpp.un~  a.out  main.cpp
module_01/ex02/: main.cpp
module_01/ex03/: a.out  main.cpp
module_01/ex04/: a.out  main.cpp
module_01/ex05/: a.out  main.cpp
module_01/ex06/: a.out  main.cpp
module_02/ex00/: Fixed  cpp_02_00  main.cpp
module_02/ex01/: Fixed.cpp  Fixed.hpp  cpp_02_00  main.cpp
module_02/ex02/: Fixed.cpp  Fixed.hpp  cpp_02_00  main.cpp
module_03/ex00/: ClapTrap.cpp  ClapTrap.hpp  Makefile  claptrap  cpp_02_00  main.cpp
module_03/ex01/: Makefile  ScavTrap.cpp  ScavTrap.hpp  cpp_02_00  main.cpp  scavtrap
module_03/ex02/: FragTrap.hpp  Makefile  main.cpp
module_03/ex03/: ClapTrap.hpp  DiamondTrap.cpp  DiamondTrap.hpp  FragTrap.cpp  FragTrap.hpp  Makefile  ScavTrap.cpp  ScavTrap.hpp
module_04/ex00/: Animal.cpp  Animal.hpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  WrongAnimal.cpp  WrongAnimal.hpp  WrongCat.cpp  WrongCat.hpp  animal  main.cpp
module_04/ex01/: Animal.cpp  Brain.cpp  Cat.cpp  Cat.hpp  Dog.cpp  Dog.hpp  Makefile  animal  main.cpp
module_04/ex02/: Animal.cpp  Animal.hpp  Brain.cpp  Brain.hpp  Dog.hpp  Makefile  animal  main.cpp
module_04/former/ex00/: CMakeLists.txt  TODO.md
module_04/former/ex00/includes/: animal.hpp
module_04/former/ex00/tests/: test.cpp
module_07/: main.cpp
(+41 files in other folders)
